test/fail/unassigned_vars.rlang
/* unassigned: r, s */
int r;
int s;
int t := r + s;
